test/resources/valid/com/boothj5/jarchexample/dto/PersonDTO.java
package com.boothj5.jarchexample.dto;

import com.boothj5.jarchexample.common.*;